--- a/E_commerce.ipynb
+++ b/E_commerce.ipynb
@@ -3778,6 +3778,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#Merging climate date and df date for further analysis"
+      ],
+      "metadata": {
+        "id": "Wcy1wWdWXxwP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df1 = pd.merge(df, climate_data, on='date', how='left')"
       ],
       "metadata": {
@@ -5915,67 +5926,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#tmr check the above code as many steps are not needed. Dont include holiday and dont remove datetime format."
-      ],
-      "metadata": {
-        "id": "PAOm24CPwxsB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df2.info()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fzce6W18cSFj",
-        "outputId": "4af692ad-7d4f-4ab3-ad95-841bd2f22a46"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 335800 entries, 0 to 335799\n",
-            "Data columns (total 21 columns):\n",
-            " #   Column                           Non-Null Count   Dtype         \n",
-            "---  ------                           --------------   -----         \n",
-            " 0   fsn_id                           335800 non-null  object        \n",
-            " 1   date                             335800 non-null  datetime64[ns]\n",
-            " 2   Year_x                           335800 non-null  int64         \n",
-            " 3   Month_x                          335800 non-null  int64         \n",
-            " 4   order_id                         335800 non-null  float64       \n",
-            " 5   order_item_id                    335800 non-null  float64       \n",
-            " 6   gmv                              335800 non-null  float64       \n",
-            " 7   units                            335800 non-null  int64         \n",
-            " 8   deliverybdays                    335800 non-null  object        \n",
-            " 9   deliverycdays                    335800 non-null  object        \n",
-            " 10  s1_fact.order_payment_type       335800 non-null  object        \n",
-            " 11  sla                              335800 non-null  int64         \n",
-            " 12  cust_id                          335800 non-null  object        \n",
-            " 13  pincode                          335800 non-null  object        \n",
-            " 14  product_analytic_super_category  335800 non-null  object        \n",
-            " 15  product_analytic_category        335800 non-null  object        \n",
-            " 16  product_analytic_sub_category    335800 non-null  object        \n",
-            " 17  product_analytic_vertical        335800 non-null  object        \n",
-            " 18  product_mrp                      335800 non-null  int64         \n",
-            " 19  product_procurement_sla          335800 non-null  int64         \n",
-            " 20  is_pay_date                      335800 non-null  int64         \n",
-            "dtypes: datetime64[ns](1), float64(3), int64(7), object(10)\n",
-            "memory usage: 53.8+ MB\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Stacked area chart for different subcategories\n",
         "weekly_subcategory_data = df2.groupby([pd.Grouper(key='date', freq='W'), 'product_analytic_sub_category'])['gmv'].sum().unstack()\n",
         "\n",
@@ -6593,15 +6543,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xVrfEfNkm5HF"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
